--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -118,3 +118,27 @@ header nav div{
 .titulo_cont h3 a{
     color: black;
 }
+
+/*mudar cor da ceta do carrocel*/
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  height: 100px;
+  width: 100px;
+  outline: black;
+  background-size: 100%, 100%;
+  border-radius: 50%;
+  background-image: none;
+}
+
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 55px;
+  color: red;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: red;
+}
